fix(Steps): fix the style of indicator line and icon overlap

--- a/src/components/steps/steps.less
+++ b/src/components/steps/steps.less
@@ -20,6 +20,7 @@
       position: absolute;
       z-index: 1;
       color: var(--icon-color);
+      background-color: var(--adm-color-background);
       > .antd-mobile-icon {
         display: block;
       }
@@ -157,6 +158,7 @@
 
 .@{class-prefix-step}-icon-container {
   font-size: var(--icon-size);
+  background-color: var(--adm-color-background);
 }
 
 .@{class-prefix-step}-icon-dot {
